[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Screens/ocean.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Screens/NameSaver.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "0"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:valign")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "1"
tracks/0/type = "value"
tracks/0/path = NodePath("Label2:valign")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "2"
tracks/0/type = "value"
tracks/0/path = NodePath("Label3:valign")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1 ]
}

[sub_resource type="Theme" id=5]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[node name="NameSaver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="NameLetter" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -28.0
margin_right = 128.0
margin_bottom = 28.0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="NameLetter"]
anims/0 = SubResource( 2 )
anims/1 = SubResource( 3 )
anims/2 = SubResource( 4 )

[node name="Timer" type="Timer" parent="NameLetter"]

[node name="Label" type="Label" parent="NameLetter"]
margin_right = 82.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "A"
align = 1
valign = 1

[node name="Label2" type="Label" parent="NameLetter"]
margin_left = 86.0
margin_right = 169.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 6 )
text = "A"
align = 1
valign = 1

[node name="Label3" type="Label" parent="NameLetter"]
margin_left = 173.0
margin_right = 256.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 6 )
text = "A"
align = 1
valign = 1

[node name="SaveButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = 88.0
margin_right = 29.0
margin_bottom = 108.0
text = "Save"

[connection signal="visibility_changed" from="." to="." method="_on_NameSaver_visibility_changed"]
[connection signal="button_up" from="SaveButton" to="." method="_on_SaveButton_button_up"]
